mustache-cli/test/errors/render-errors.t/missing-variable.mustache
Title: {{title}}

List:
{{#list}}
  - {{data}}
{{/list}}

Group:
{{#group}}
  {{group.first}}
  {{second}}
{{/group}}

{{#name}}The variable "name" has value "{{na}}".{{/name}}
{{^name}}The variable "name" is not set. {{/name}}

Last line.